# mediasoup

./: .gitignore  CMakeLists.txt  README.md
worker/: CMakeLists.txt  MediasoupConfig.cmake.in
